--- a/assets/css/actions.css
+++ b/assets/css/actions.css
@@ -1,4 +1,3 @@
-
 /* Actions */
 ul.actions {
   display: -moz-flex;
@@ -10,10 +9,12 @@ ul.actions {
   margin-left: -1em;
   padding-left: 0;
 }
+
 ul.actions li {
   padding: 0 0 0 1em;
   vertical-align: middle;
 }
+
 ul.actions.special {
   -moz-justify-content: center;
   -webkit-justify-content: center;
@@ -22,9 +23,11 @@ ul.actions.special {
   width: 100%;
   margin-left: 0;
 }
+
 ul.actions.special li:first-child {
   padding-left: 0;
 }
+
 ul.actions.stacked {
   -moz-flex-direction: column;
   -webkit-flex-direction: column;
@@ -32,15 +35,19 @@ ul.actions.stacked {
   flex-direction: column;
   margin-left: 0;
 }
+
 ul.actions.stacked li {
   padding: 1.3em 0 0 0;
 }
+
 ul.actions.stacked li:first-child {
   padding-top: 0;
 }
+
 ul.actions.fit {
   width: calc(100% + 1em);
 }
+
 ul.actions.fit li {
   -moz-flex-grow: 1;
   -webkit-flex-grow: 1;
@@ -52,10 +59,51 @@ ul.actions.fit li {
   flex-shrink: 1;
   width: 100%;
 }
-ul.actions.fit li > * {
+
+ul.actions.fit li>* {
   width: 100%;
 }
+
 ul.actions.fit.stacked {
   width: 100%;
 }
 
+/* .news_wrapper {
+  display: flex;
+  width: 100%;
+  height: 30px;
+} */
+.top-news {
+  background-color: rgb(183, 249, 85);
+  text-align: center;
+  display: block;
+  font-weight: bold;
+  padding: 5px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+  animation: newsAnimation 3s linear infinite;
+  /* position: absolute; */
+  width: 100%;
+}
+
+.top_news-link {
+  color: black;
+  font-weight: bold;
+}
+
+@keyframes newsAnimation {
+  0% {
+    /* font-size: 13px; */
+    transform: scale(1);
+  }
+
+  50% {
+    /* font-size: 14px; */
+    transform: scale(0.98);
+  }
+
+  100% {
+    /* font-size: 13px; */
+    transform: scale(1);
+  }
+}
